<resources>
    <string name="app_name">Contacts Book</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="new_contact">New contact</string>
    <string name="add_contact">Add contact</string>
    <string name="signin">Sign in</string>
    <string name="signout">Sign out</string>
    <string name="greeting">Welcome %1$s</string>
    <string name="toggle_language">Toggle language</string>

    <string name="facebook_application_id" translatable="false">267605424540604</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb267605424540604</string>
</resources>
